[gd_scene load_steps=5 format=3 uid="uid://dgyx5nfep28xe"]

[ext_resource type="Script" path="res://scenes/weapons/raycast_weapon.gd" id="1_ivyfg"]
[ext_resource type="Texture2D" uid="uid://d1352lym3gnye" path="res://assets/shotgun(1).svg" id="2_pldat"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w20rk"]
radius = 15.802

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_smioq"]

[node name="RaycastWeapon" type="CharacterBody2D"]
collision_layer = 16
collision_mask = 0
script = ExtResource("1_ivyfg")

[node name="Graphics" type="Node2D" parent="."]

[node name="OnHand" type="Sprite2D" parent="Graphics"]
position = Vector2(124, 0)
rotation = 1.5708
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_pldat")

[node name="PickArea" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 259

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickArea"]
position = Vector2(101, 0)
scale = Vector2(10, 10)
shape = SubResource("CircleShape2D_w20rk")

[node name="ROF" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="VanishTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="RaycastsNode" type="Node2D" parent="."]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamMP3_smioq")
area_mask = 3

[connection signal="body_entered" from="PickArea" to="." method="_on_pick_area_body_entered"]
[connection signal="body_exited" from="PickArea" to="." method="_on_pick_area_body_exited"]
[connection signal="timeout" from="ROF" to="." method="_on_rof_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="VanishTimer" to="." method="_on_vanish_timer_timeout"]
